admin logout z-index bug

--- a/public_html/assets/admin/light.css
+++ b/public_html/assets/admin/light.css
@@ -240,3 +240,6 @@ div[data-field-name="image"] img{
     background-color: transparent;
     border-bottom: none;
 }
+.panel.widget .panel-content{
+    z-index: 0;
+}
